[tool.poetry]
name = "scikit-scoringsystem-cascadizer"
version = "0.1.0"
description = ""
authors = ["Stefan Heid <stefan.heid@upb.de>"]
readme = "README.md"
packages = [{ include = "skcascade" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = "^1.3.2"
numpy = "^1.26.1"
pandas = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
