[tool.poetry]
name = "scikit-scoringsystem-cascadizer"
version = "0.1.5"
description = ""
authors = ["Stefan Heid <stefan.heid@upb.de>"]
readme = "README.md"
packages = [{ include = "skcascade" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = "^1.3.2"
numpy = "^1.26.1"
pandas = "^2.1.2"
scipy = "^1.11.3"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"


[tool.poetry.group.experiments.dependencies]
networkx = "^3.2.1"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
pyvis = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
